# hyrule-cloud

./: .dockerignore  .env.example  .gitignore  .pr_agent.toml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SKILL-agentic-support.md  SKILL-bgp.md  SKILL-dns-registry.md  SKILL-mail-deliverability.md  SKILL-mail.md  SKILL-mx.md  SKILL-nat-cgnat.md  SKILL-network-intel.md  SKILL-port-reachability.md  SKILL-routing-path.md  SKILL-speedtest.md  SKILL-threat-reputation.md  SKILL-voip-sip.md  SKILL-web-reachability.md  SKILL.md  alembic.ini  db_patch.py  db_patch2.py  db_patch3.py  docker-compose.yml  pyproject.toml  refactor_providers.py  routes_patch.py
.github/workflows/: ci.yml  deploy.yml  pr-agent.yml  semgrep.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_security_hotfix.py  003_auth_and_ownership.py  004_intent_engine.py  005_provisioned_at.py  006_api_keys.py  007_recovery_challenges.py  008_vm_quotes.py  009_domain_launch_fields.py  010_network_intelligence_bgp_mx_mail.py  011_diagnostic_job_primitives.py  012_vm_customer_ipv6_prefixes.py  012_zcash_x402_invoices.py  013_payments_ledger.py  014_provision_started_at.py  015_managed_domain_reselling.py  015_trust_receipts.py  016_ip_check_sessions.py  016_reverse_tunnels.py  016_service_heartbeats.py  016_vm_configurable_resources.py  016_x401_shadow.py  017_admin_console.py  017_agent_mail_and_wallet_domains.py  017_reverse_tunnels.py  017_x402_domain_registration_sales.py  018_agent_mail_review_safety.py  019_agent_mail_provision_leases.py  020_agent_mail_payment_binding.py  021_agent_mail_settlement_and_dns_cleanup.py  022_domain_settlement_and_mail_message_scope.py  023_payment_recovery_and_domain_authority.py  024_mail_send_settlement_recovery.py  025_global_payment_authorizations.py  026_mail_reply_references.py  027_payment_recovery_retries.py
docs/: agentic-isp-support-rollout.md  trust-layer.md  vm-configurable-resources.md  vps-launch-proof-contract.md  x402-compute-fulfillment-receipt.md
docs/plans/: 2026-07-01-zcash-x402-v2-binding.md  2026-07-01T17-12-27Z-fix-hyrule-cloud-x402-server-side-payments.md  2026-07-10-agent-trust-layer.md
docs/runbooks/: cdp-bazaar-cutover.md  ip-quality-launch.md  prober-deploy.md  response-signing.md  trust-keys.md  x402-launch.md
hyrule_cloud/: admin_cli.py  agent_probe.py  app.py  client.py  config.py  db.py  logging_config.py  mcp_server.py  models.py  orchestrator.py  state.py  worker.py
hyrule_cloud/api/: _contract.py  admin.py  auth.py  bgp.py  dns.py  internal_bgp.py  ip.py  ip_check.py  mail.py  metrics.py  mx.py  nat.py  path.py  ports.py  registry.py  routes.py  speedtest.py  status.py  threat.py  trust.py  tunnel.py  voip.py  web.py  zcash_x402.py
hyrule_cloud/domains/: __init__.py  api.py  catalog.py  dns_control.py  errors.py  models.py  pricing.py  service.py  validation.py  wallet_auth.py
hyrule_cloud/mail/: __init__.py  backend.py  models.py  security.py  service.py
hyrule_cloud/middleware/: anon_token.py  auth.py  metrics.py  signing.py  x402.py
hyrule_cloud/payments/: __init__.py  zcash.py
hyrule_cloud/providers/: base.py  cloudinit.py  dns.py  ip_quality.py  native_crypto.py  network_client.py  network_config.py  openprovider.py  prober_client.py  prometheus.py  rates.py  tunnel_client.py  xcpng.py
hyrule_cloud/services/: admin_operations.py  api_keys.py  cache.py  discovery.py  intents.py  ip_check.py  launch_proof.py  nat.py  passwords.py  payments_ledger.py  quotes.py  refunds.py  safety.py  sessions.py  signing.py  speedtest.py  vm_pricing.py  worker_health.py
hyrule_cloud/services/bgp/: __init__.py  lookup.py  snapshots.py  stream.py
hyrule_cloud/services/diagnostics/: __init__.py  jobs.py  sources.py
hyrule_cloud/services/dns/: __init__.py  blocklists.py  diagnostics.py  domain.py  filtering.py  lookup.py
hyrule_cloud/services/intel/: __init__.py  ip.py  ip_quality.py
hyrule_cloud/services/mail/: __init__.py  backend.py
hyrule_cloud/services/mx/: __init__.py  checks.py  deliverability.py
hyrule_cloud/services/path/: __init__.py  diagnostics.py
hyrule_cloud/services/ports/: __init__.py  checks.py
hyrule_cloud/services/registry/: __init__.py  lookup.py
hyrule_cloud/services/threat/: __init__.py  lookup.py
hyrule_cloud/trust/: __init__.py  identity.py  measurements.py  models.py  principal.py  receipts.py  x401.py
scripts/: erc8004_register.py  verify_facilitator.py  verify_receipt.py  x402_canary.py
skills/: README.md
skills/hyrule-agent-mail/: SKILL.md
skills/hyrule-agentic-support/: SKILL.md
skills/hyrule-bgp/: SKILL.md
skills/hyrule-cloud/: SKILL.md
skills/hyrule-customer-journeys/: SKILL.md
skills/hyrule-dns-registry/: SKILL.md
skills/hyrule-mail/: SKILL.md
skills/hyrule-mail-deliverability/: SKILL.md
skills/hyrule-mx/: SKILL.md
skills/hyrule-nat-cgnat/: SKILL.md
skills/hyrule-network-intel/: SKILL.md
skills/hyrule-port-reachability/: SKILL.md
skills/hyrule-routing-path/: SKILL.md
skills/hyrule-speedtest/: SKILL.md
skills/hyrule-threat-reputation/: SKILL.md
skills/hyrule-voip-sip/: SKILL.md
skills/hyrule-web-reachability/: SKILL.md
tests/: test_admin_cli.py  test_admin_control_plane.py  test_admin_migration.py  test_agent_mail.py  test_agent_probe.py  test_api.py  test_api_keys.py  test_auth.py  test_authz.py  test_bgp_snapshot_listing.py  test_ci_workflows.py  test_customer_ipv6.py  test_diagnostic_primitives.py  test_dns_blocking_products.py  test_dns_provider.py  test_domains_v1.py  test_intent_engine.py  test_ip_check.py  test_ip_quality.py  test_launch_blockers.py  test_launch_proof.py  test_logging_config.py  test_mcp_auth_tools.py  test_mcp_payment_tools.py  test_mx_null.py  test_network_intel_contracts.py  test_packaging.py  test_path_prober.py  test_payment_gate_x402.py  test_payments_ledger.py  test_payments_networks.py  test_products.py  test_refunds.py  test_runtime_metrics.py  test_service_status.py  test_signing.py  test_skills_distribution.py  test_stats_network.py  test_stun_probe.py  test_trust_fulfillment.py  (+16 more)
(+17 files in other folders)
