[project]
name = "hyrule-cloud"
version = "0.1.0"
description = "Agentic VPS hosting with x402 payments on AS215932"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx[socks]>=0.28",
    "pyyaml>=6.0",
    "pycdlib>=1.14",
    "jinja2>=3.1",
    "structlog>=24.4",
    "apscheduler>=3.10",
    # x402 official SDK (x402-foundation)
    "x402[fastapi,evm]>=2.9",
    # DNS (RFC 2136 dynamic updates)
    "dnspython>=2.6",
    # XO WebSocket JSON-RPC
    "websockets>=13.0",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # MCP server
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "aiosqlite>=0.20",
]

[project.scripts]
hyrule-mcp = "hyrule_cloud.mcp_server:main"

[tool.setuptools.packages.find]
include = ["hyrule_cloud*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
# RUF012: mutable class defaults in test mock classes. Each test defines
# fresh nested mock classes (MockOrchestrator, _OrchOK, etc.) and the
# mutable-default pitfall (state bleeding across instances) doesn't
# apply — they're per-test scaffolding. Suppressed only under tests/.
"tests/*.py" = ["RUF012"]

[tool.mypy]
python_version = "3.12"
strict = true
