[project]
name = "hyrule-cloud"
version = "0.1.0"
description = "Agentic VPS hosting with x402 payments on AS215932"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx[socks]>=0.28",
    "pyyaml>=6.0",
    "pycdlib>=1.14",
    "jinja2>=3.1",
    "structlog>=24.4",
    "apscheduler>=3.10",
    # x402 official SDK (x402-foundation)
    "x402[fastapi,evm]>=2.9",
    # DNS (RFC 2136 dynamic updates)
    "dnspython>=2.6",
    # XO WebSocket JSON-RPC
    "websockets>=13.0",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # MCP server
    "mcp>=1.0",
    # Block A1 (Wave 2): argon2id for passwords + recovery codes
    "argon2-cffi>=23.1",
    # Block A1 (Wave 2): TTL cache for per-IP rate-limit buckets
    "cachetools>=5.5",
    # Block E (Wave 4): pure-Python BIP32/BIP84 HD derivation for BTC receive
    # addresses from a watch-only xpub (no keys held). coincurve is bip-utils'
    # secp256k1 backend; pinned for the Debian 13 / Python 3.13 runner.
    "bip-utils>=2.9,<2.10",
    "coincurve>=20.0,<21.0",
    # Block F (Wave 5): EIP-191 signature recovery for wallet-signature account
    # recovery (recover the signer address from a personal_sign signature).
    "eth-account>=0.13",
    # CDP x402 facilitator auth signs short-lived ES256 JWTs when operators
    # select the Coinbase CDP production facilitator.
    "pyjwt>=2.10",
    "cryptography>=46.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "aiosqlite>=0.20",
    # Block H (Wave 5): mock httpx for the Prometheus /v1/stats/network tests.
    "respx>=0.21",
]

[project.scripts]
hyrule-mcp = "hyrule_cloud.mcp_server:main"
hyrule-cloud-worker = "hyrule_cloud.worker:main"
hyrule-admin = "hyrule_cloud.admin_cli:main"

[tool.setuptools.packages.find]
include = ["hyrule_cloud*"]

[tool.setuptools.package-data]
hyrule_cloud = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["refactor_providers.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
# E402 / E501 globally ignored: both are pre-A0 baseline noise (toy
# AccountRow patches at the bottom of db.py force mid-file imports;
# several SQLAlchemy Enum / route signatures sit at 100-200 chars).
# The post-A0 cleanup PR will refactor db.py and reflow long lines;
# until then, gating new touched files on these style rules would
# block Wave 1 for cosmetic reasons that don't catch real bugs.
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]
# RUF012: mutable class defaults in test mock classes. Each test defines
# fresh nested mock classes (MockOrchestrator, _OrchOK, etc.) and the
# mutable-default pitfall (state bleeding across instances) doesn't
# apply — they're per-test scaffolding. Suppressed only under tests/.
# F811: cross-file pytest fixtures (e.g. tests/test_api_keys.py imports
# `auth_state` + `client` from tests/test_auth.py). The fixture-name-
# as-argument idiom looks like a redefinition to ruff but is how pytest
# discovers fixtures across modules. Moving them to conftest.py is the
# long-term fix; until then, ignore the noise inside tests/.
"tests/*.py" = ["RUF012", "F811"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["bip_utils", "bip_utils.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "hyrule_cloud.api.auth",
    "hyrule_cloud.api.routes",
    "hyrule_cloud.app",
    "hyrule_cloud.client",
    "hyrule_cloud.db",
    "hyrule_cloud.mcp_server",
    "hyrule_cloud.middleware.auth",
    "hyrule_cloud.middleware.x402",
    "hyrule_cloud.models",
    "hyrule_cloud.orchestrator",
    "hyrule_cloud.providers.cloudinit",
    "hyrule_cloud.providers.dns",
    "hyrule_cloud.providers.native_crypto",
    "hyrule_cloud.providers.network_client",
    "hyrule_cloud.providers.openprovider",
    "hyrule_cloud.providers.prometheus",
    "hyrule_cloud.providers.xcpng",
    "hyrule_cloud.services.intents",
    "hyrule_cloud.services.quotes",
    "hyrule_cloud.services.sessions",
    "hyrule_cloud.state",
]
ignore_errors = true
